[package]
name = "simple_market_maker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.66"
candid = "0.8.4"
dotenv = "0.15.0"
futures = "0.3.27"
ic-agent = "0.23.1"
itertools = "0.10.5"
tokio = { version = "1.26.0", features = ["macros", "time"] }

[dev-dependencies]
test-case = "3.0.0"
